2003-12-08  Carl Worth  <cworth@isi.edu>

	* src/cairo_path_bounds.c (_cairo_path_bounder_move_to):
	(_cairo_path_bounder_line_to):
	(_cairo_path_bounder_curve_to):
	(_cairo_path_bounder_close_path): Track change in
	cairo_path_callbacks interface.

	* src/cairoint.h: 
	* src/cairo_path_stroke.c: 
	* src/cairo_path_fill.c: 
	* src/cairo_path.c: Clean up cairo_path_callbacks to have move_to,
	line_to, curve_to, abd close_path instead of add_edge, add_spline,
	and done_sub_path. Much, much nicer.

	* src/cairo_polygon.c (_cairo_polygon_move_to): Provide
	cairo_polygon_move_to and cairo_polygon_line_to instead of
	cairo_polygon_add_point.

	* src/cairo_pen.c (_cairo_pen_stroke_spline_half): Track change in
	cairo_polygon interface.

2003-12-08  Carl Worth  <cworth@isi.edu>

	* configure.in: Bump version to 0.1.16 since it actually has a
	hope of building, (due to fix for broken cairo-xlib.h includes).

2003-12-05  Carl Worth  <cworth@east.isi.edu>

	* src/cairo_xlib_surface.c: Don't include obsolete cairo-xlib.h.

	* autogen.sh (AUTOCONF): Allow names of all autofoo programs to be
	overridden via environment variables.

	* configure.in: Bump version to 0.1.15 for new
	CAIRO_HAS_XLIB_SURFACE macro.

	* src/cairo.h: Add missing #include <cairo-features.h>

	* Rename cairo-config.h to cairo-features.h.

	* configure.in: Rename XLIB_BACKEND_DEFINE to
	XLIB_SURFACE_FEATURE. Rename AM_CONDITIONAL HAVE_XLIB_BACKEND to
	CAIRO_HAS_XLIB_SURFACE. Rename user-visibile macro
	CAIRO_HAS_XLIB_BACKEND to CAIRO_HAS_XLIB_SURFACE.

2003-12-03  Carl Worth  <cworth@east.isi.edu>

	* configure.in: Bumped version to 0.1.14 to indicate dropped
	cairo-xlib.h and new cairo-config.h.

	* New support for "./configure --without-x" to compile without the
	xlib backend. Many thanks to Sasha V. <sasha@aftercode.net>.
	
	* configure.in: We do three things here: Make the pkg-config check
	for xrender conditional, set XLIB_BACKEND_DEFINE to either